# bramplot

./: .gitignore  LICENSE  README.md  pyproject.toml
bramplot/: __init__.py  find_figure_width.py  find_sizes.py  presets.py
test/: batch_export_formats.py  fig_format.py  plot.py  readme_figure.py  set_size_example.py
