[project]
name = "bramplot"
version = "0.1"
description = "Bram's personal plotting library"
readme = "README.md"
dependencies = ["matplotlib", "SciencePlots", "catppuccin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bramplot"]
